# task_scheduler

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/modules/tasks/: api.py  dependencies.py  models.py  schemas.py  service.py
tests/: test_tasks_service.py
